--- a/personal-feed-service/personal-feed-service/docker-compose.yml
+++ b/personal-feed-service/personal-feed-service/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql  # опционально
+      - ./docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
@@ -37,15 +37,13 @@ services:
       dockerfile: Dockerfile
     container_name: personal-feed-service
     environment:
-      # Переопределяем application.properties для Docker
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/personal_feed
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: password
       SPRING_DATA_REDIS_HOST: redis
       SPRING_DATA_REDIS_PORT: 6379
       SPRING_CACHE_TYPE: redis
-      # Для продакшена лучше включить Caffeine + Redis или только Redis
-      SPRING_CACHE_REDIS_TIME-TO-LIVE: 600000  # 10 минут (можно настроить)
+      SPRING_CACHE_REDIS_TIME-TO-LIVE: 600000  #10 минут
       LOGGING_LEVEL_ORG_SPRINGFRAMEWORK: INFO
       LOGGING_LEVEL_ORG_HIBERNATE: WARN
     ports:
